--- a/resum.html
+++ b/resum.html
@@ -35,9 +35,8 @@
     </div>
     <div id="SN" class="kotaker">
         <h3>social networks:</h3>
-        <a href="#">Instagram</a>
-        <a href="#">| Facebook</a>
-        <a href="#">| telegram</a>
+        <a href="https://www.instagram.com/sultanasimbekov/" target="_blank">Instagram</a>
+        <a href="https://www.facebook.com/profile.php?id=100062027175233" target="_blank">| Facebook</a>
     
         <h2>My hobbies</h2>
         <ol>
